--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^7.11.0",
     "request": "^2.88.2",
     "semantic-ui-vue": "^0.10.1",
+    "tailwindcss": "^1.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
